<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="triangulo">Triangulo</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="circulo">Circulo</string>
    <string name="lado">Lado</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="Radio">Radio</string>
    <string name="hint">Ingrese el valor</string>
    <string name="calcular">Calcular</string>
    <string name="area">Área</string>
    <string name="obligatorio">Campo obligatorio</string>
</resources>
